@@ -1,9 +1,10 @@
 package org.matsim.modechoice;
 
 import com.google.inject.Inject;
-import org.matsim.api.core.v01.TransportMode;
 import org.matsim.api.core.v01.population.Leg;
 import org.matsim.api.core.v01.population.PlanElement;
+import org.matsim.core.config.groups.PlansConfigGroup;
+import org.matsim.core.router.AnalysisMainModeIdentifier;
 import org.matsim.core.router.TripRouter;
 import org.matsim.core.router.TripStructureUtils;
 import org.matsim.core.utils.timing.TimeInterpretation;
@@ -23,14 +24,18 @@ public final class EstimateRouter {
 
 	private final TripRouter tripRouter;
 	private final ActivityFacilities facilities;
+	private final AnalysisMainModeIdentifier mmi;
 	private final TimeInterpretation timeInterpretation;
 
 	@Inject
 	public EstimateRouter(TripRouter tripRouter, ActivityFacilities facilities,
-	                      TimeInterpretation timeInterpretation) {
+						  AnalysisMainModeIdentifier mmi) {
 		this.tripRouter = tripRouter;
 		this.facilities = facilities;
-		this.timeInterpretation = timeInterpretation;
+		this.mmi = mmi;
+		// ignore the travel times of individual legs
+		this.timeInterpretation = TimeInterpretation.create(PlansConfigGroup.ActivityDurationInterpretation.tryEndTimeThenDuration,
+			PlansConfigGroup.TripDurationHandling.ignoreDelays);
 	}
 
 	/**
@@ -73,7 +78,6 @@ public final class EstimateRouter {
 				}
 				 */
 
-				// Use the end-time of an activity or the time tracker if not available
 				final List<? extends PlanElement> newTrip = tripRouter.calcRoute(
 						mode, from, to,
 						oldTrip.getOriginActivity().getEndTime().orElse(timeTracker.getTime().seconds()),
@@ -81,6 +85,7 @@ public final class EstimateRouter {
 						oldTrip.getTripAttributes()
 				);
 
+				// update time tracker, however it will be updated before each iteration
 				timeTracker.addElements(newTrip);
 
 				// store and increment
@@ -88,21 +93,6 @@ public final class EstimateRouter {
 						.filter(el -> el instanceof Leg)
 						.map(el -> (Leg) el)
 						.collect(Collectors.toList());
-
-				// The PT router can return walk only trips that don't actually use pt
-				// this one special case is handled here, it is unclear if similar behaviour might be present in other modes
-				if (mode.equals(TransportMode.pt) && ll.stream().noneMatch(l -> l.getMode().equals(TransportMode.pt))) {
-					legs[i++] = null;
-					continue;
-				}
-
-				// TODO: might consider access agress walk modes
-
-				// Filters all kind of modes that did return only walk legs when they could not be used (e.g. drt)
-				if (!mode.equals(TransportMode.walk) && ll.stream().allMatch(l -> l.getMode().equals(TransportMode.walk))) {
-					legs[i++] = null;
-					continue;
-				}
 
 				legs[i++] = ll;
 
@@ -146,12 +136,6 @@ public final class EstimateRouter {
 					.map(el -> (Leg) el)
 					.collect(Collectors.toList());
 
-			// not a real pt trip, see reasoning above
-			if (mode.equals(TransportMode.pt) && ll.stream().noneMatch(l -> l.getMode().equals(TransportMode.pt))) {
-				model.setLegs(mode, new List[model.trips()]);
-				continue;
-			}
-
 			List<Leg>[] legs = new List[model.trips()];
 			legs[idx] = ll;
 
@@ -183,10 +167,13 @@ public final class EstimateRouter {
 		List<Leg> oldLegs = oldTrip.getLegsOnly();
 		boolean undefined = oldLegs.stream().anyMatch(l -> timeInterpretation.decideOnLegTravelTime(l).isUndefined());
 
-		// If no time is known the previous trips need to be routed
+		// If no time is known the previous trips needs to be routed
 		if (undefined) {
-			String routingMode = TripStructureUtils.getRoutingMode(oldLegs.get(0));
-			List<? extends PlanElement> legs = routeTrip(oldTrip, plan, routingMode != null ? routingMode : oldLegs.get(0).getMode(), timeTracker);
+			String routingMode = TripStructureUtils.getRoutingMode(oldLegs.getFirst());
+			if (routingMode == null)
+				routingMode = mmi.identifyMainMode(oldLegs);
+
+			List<? extends PlanElement> legs = routeTrip(oldTrip, plan, routingMode, timeTracker);
 			timeTracker.addElements(legs);
 
 		} else
